fix: update workflow for runtime permissions