@@ -2,7 +2,10 @@ package com.halo.lims.config;
 
 import com.halo.lims.security.CustomUserDetailsService;
 import com.halo.lims.security.JwtRequestFilter;
+import com.halo.lims.security.RateLimitingFilter;
+import com.halo.lims.security.RequestAuditLoggingFilter;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -26,6 +29,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -38,6 +42,15 @@ public class SecurityConfig {
 
     @Autowired
     private JwtRequestFilter jwtRequestFilter;
+
+    @Autowired
+    private RequestAuditLoggingFilter requestAuditLoggingFilter;
+
+    @Autowired
+    private RateLimitingFilter rateLimitingFilter;
+
+    @Value("${app.cors.allowed-origin-patterns:https://hale-lims-web-322945089195.asia-south1.run.app}")
+    private List<String> allowedOriginPatterns;
 
     public SecurityConfig(CustomUserDetailsService customUserDetailsService) {
         this.customUserDetailsService = customUserDetailsService;
@@ -76,15 +89,20 @@ public class SecurityConfig {
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Permit all OPTIONS requests
                         .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/health").permitAll()
+                        .requestMatchers("/api/integration/**").permitAll() // Internal service-to-service (PHR ↔ LIMS)
+                    .requestMatchers("/error").permitAll()
                         // Allow access to Swagger UI
                         .requestMatchers("/swagger-ui.html", "/swagger-ui/**").permitAll()
-                        .requestMatchers("v3/api-docs", "/v3/api-docs/**").permitAll()
+                        .requestMatchers("/v3/api-docs", "/v3/api-docs/**").permitAll()
                         // Public endpoints (e.g., ABHA init, if applicable without auth)
                         // .requestMatchers("/api/public/**").permitAll()
                         .anyRequest().authenticated() // All other requests require authentication
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // For stateless API (JWT)
                 .authenticationProvider(authenticationProvider()) // Register your custom authentication provider
+                .addFilterBefore(requestAuditLoggingFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(rateLimitingFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class); // Add JWT filter
 
         return http.build();
@@ -93,13 +111,18 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "https://hale-lims-web-322945089195.asia-south1.run.app",
-                "http://localhost:3000",
-                "http://localhost:4200",
-                "http://localhost:8081",
-                "http://localhost:5173"
-        ));
+        List<String> sanitizedOrigins = allowedOriginPatterns == null
+            ? List.of("https://hale-lims-web-322945089195.asia-south1.run.app")
+            : allowedOriginPatterns.stream()
+            .map(String::trim)
+            .filter(origin -> !origin.isEmpty())
+            .collect(Collectors.toList());
+
+        configuration.setAllowedOriginPatterns(
+            sanitizedOrigins.isEmpty()
+                ? List.of("https://hale-lims-web-322945089195.asia-south1.run.app", "http://localhost:5173")
+                : sanitizedOrigins
+        );
         configuration.setAllowedMethods(List.of("*"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
